--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
-    "antd": "^5.6.2",
+    "antd": "^5.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.13.0",
+    "react-slick": "^0.29.0",
     "styled-components": "^6.0.0-rc.3"
   },
   "devDependencies": {
