--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.13.0",
     "react-slick": "^0.29.0",
-    "styled-components": "^6.0.0-rc.3"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
